fix(Admin):removed scrollbars

--- a/Client/src/Views/Admin/Admin.module.css
+++ b/Client/src/Views/Admin/Admin.module.css
@@ -28,7 +28,12 @@
 
 .adminWindow{
   width: 100%;
-  height: 90vh;overflow: scroll;
+  height: 90vh;
+  overflow: scroll;
+}
+
+.adminWindow::-webkit-scrollbar{
+  display: none;
 }
 
 .windowSelector{
